# EasySmallEmbeddingModel

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  test_gte_head_pruning.py
smallmodel/: __init__.py  arch.py  cli.py  core.py  data.py  distill.py  sizing.py  teachers.py
smallmodel/web/: app.py  distill_runner.py
smallmodel/web/static/css/: style.css
smallmodel/web/static/js/: app.js
smallmodel/web/templates/: index.html
