[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "EasySmallEmbeddingModel"
version = "0.1.0"
description = "Compress large embedding models into small, fast students via layer pruning, vocab pruning, hidden dim reduction, and knowledge distillation."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [{name = "gomyk"}]
keywords = ["embedding", "model-compression", "distillation", "pruning", "sentence-transformers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.24.0",
    "tqdm",
    "sentencepiece",
    "protobuf",
]

[project.optional-dependencies]
eval = ["mteb>=1.14.0", "pandas>=2.0.0"]
export = ["onnxruntime>=1.16.0", "onnx>=1.15.0", "optimum[onnxruntime]>=1.16.0"]
hub = ["huggingface-hub>=0.20.0"]
web = ["flask>=3.0.0"]
all = ["EasySmallEmbeddingModel[eval,export,hub,web]"]

[project.scripts]
smallmodel = "smallmodel.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"smallmodel.web" = ["static/**/*", "templates/**/*"]
